{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 1350,
  "lineage": "4f59f19f-01b2-76a0-ba18-7b065bb6e768",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:network-acl/acl-00176847de579ed3d",
            "default_network_acl_id": "acl-00176847de579ed3d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00176847de579ed3d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "551940803425",
            "subnet_ids": [
              "subnet-037d8a5af7fa21cbf",
              "subnet-07060f848eb3f8164",
              "subnet-0891e166940164077",
              "subnet-095275676602fc891"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0caea74f908922064"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:network-acl/acl-0ef3da109652dc660",
            "default_network_acl_id": "acl-0ef3da109652dc660",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ef3da109652dc660",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "551940803425",
            "subnet_ids": [
              "subnet-031680b8b7962ed11",
              "subnet-05ff2b004e664c7db",
              "subnet-0666dae9e5ab928f6",
              "subnet-079195ef82be74e16",
              "subnet-0ebf441c8537f612d",
              "subnet-0ff277c4b2fb94045"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cdd7b343c359fd9",
            "domain": "vpc",
            "id": "eipalloc-08cdd7b343c359fd9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-72-22.compute-1.amazonaws.com",
            "public_ip": "52.73.72.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8eaaf160393fd32",
            "domain": "vpc",
            "id": "eipalloc-0e8eaaf160393fd32",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-26-6-16.compute-1.amazonaws.com",
            "public_ip": "100.26.6.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig2",
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:internet-gateway/igw-044f4e54fcd3ca805",
            "id": "igw-044f4e54fcd3ca805",
            "owner_id": "551940803425",
            "tags": {
              "Name": "carlos-igw"
            },
            "tags_all": {
              "Name": "carlos-igw"
            }
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:internet-gateway/igw-054943dc69ee42ad0",
            "id": "igw-054943dc69ee42ad0",
            "owner_id": "551940803425",
            "tags": {
              "Name": "carlos-igw"
            },
            "tags_all": {
              "Name": "carlos-igw"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-044f4e54fcd3ca805",
            "id": "r-rtb-05e2ec78fd8b70fe61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e2ec78fd8b70fe6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054943dc69ee42ad0",
            "id": "r-rtb-0fbb08d9b131e2dc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fbb08d9b131e2dc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig2",
            "aws_route_table.public2",
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:route-table/rtb-04df3692686ac323d",
            "id": "rtb-04df3692686ac323d",
            "owner_id": "551940803425",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "carlos-route-table"
            },
            "tags_all": {
              "Name": "carlos-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caea74f908922064"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:route-table/rtb-0a4d0a482aee651da",
            "id": "rtb-0a4d0a482aee651da",
            "owner_id": "551940803425",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "carlos-route-table"
            },
            "tags_all": {
              "Name": "carlos-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:route-table/rtb-05e2ec78fd8b70fe6",
            "id": "rtb-05e2ec78fd8b70fe6",
            "owner_id": "551940803425",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "carlos-route-table"
            },
            "tags_all": {
              "Name": "carlos-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caea74f908922064"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:route-table/rtb-0fbb08d9b131e2dc7",
            "id": "rtb-0fbb08d9b131e2dc7",
            "owner_id": "551940803425",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "carlos-route-table"
            },
            "tags_all": {
              "Name": "carlos-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d992c0efb5ff6297",
            "route_table_id": "rtb-05e2ec78fd8b70fe6",
            "subnet_id": "subnet-07060f848eb3f8164"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.carlos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002095d7a09175e92",
            "route_table_id": "rtb-05e2ec78fd8b70fe6",
            "subnet_id": "subnet-037d8a5af7fa21cbf"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d587acd79ee41d4",
            "route_table_id": "rtb-0fbb08d9b131e2dc7",
            "subnet_id": "subnet-079195ef82be74e16"
          },
          "dependencies": [
            "aws_route_table.public2",
            "aws_subnet.public2",
            "aws_vpc.carlos2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1b54da47bb709b4",
            "route_table_id": "rtb-0fbb08d9b131e2dc7",
            "subnet_id": "subnet-031680b8b7962ed11"
          },
          "dependencies": [
            "aws_route_table.public2",
            "aws_subnet.public2",
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:security-group/sg-066ed8d8227da680f",
            "description": "SG padrao utilizado para acesso",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066ed8d8227da680f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "179.98.129.28/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "suco",
            "name_prefix": "",
            "owner_id": "551940803425",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "suco"
            },
            "tags_all": {
              "Name": "suco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-04bb3711694d8ab6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bb3711694d8ab6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet"
            },
            "tags_all": {
              "Name": "db-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-095275676602fc891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095275676602fc891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet"
            },
            "tags_all": {
              "Name": "db-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-0ebf441c8537f612d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebf441c8537f612d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet"
            },
            "tags_all": {
              "Name": "db-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-05ff2b004e664c7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ff2b004e664c7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet"
            },
            "tags_all": {
              "Name": "db-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-0515d7718585a422a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0515d7718585a422a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-0891e166940164077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0891e166940164077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-0ff277c4b2fb94045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff277c4b2fb94045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-0666dae9e5ab928f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0666dae9e5ab928f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-07060f848eb3f8164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07060f848eb3f8164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-037d8a5af7fa21cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d8a5af7fa21cbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0caea74f908922064"
          },
          "dependencies": [
            "aws_vpc.carlos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-079195ef82be74e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079195ef82be74e16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:subnet/subnet-031680b8b7962ed11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031680b8b7962ed11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551940803425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0ed553f74adaf7bf4"
          },
          "dependencies": [
            "aws_vpc.carlos2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "carlos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:vpc/vpc-0caea74f908922064",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00176847de579ed3d",
            "default_route_table_id": "rtb-08185a78745436c8f",
            "default_security_group_id": "sg-000ea2a5b5fef4461",
            "dhcp_options_id": "dopt-0075b981a82ffacef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0caea74f908922064",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08185a78745436c8f",
            "owner_id": "551940803425",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "carlos1-vpc",
              "Owner": "Carlos"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "carlos1-vpc",
              "Owner": "Carlos"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "carlos2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551940803425:vpc/vpc-0ed553f74adaf7bf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ef3da109652dc660",
            "default_route_table_id": "rtb-06acac4f698b539a5",
            "default_security_group_id": "sg-0a130645074c7ef28",
            "dhcp_options_id": "dopt-0075b981a82ffacef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed553f74adaf7bf4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06acac4f698b539a5",
            "owner_id": "551940803425",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "carlos2-vpc",
              "Owner": "Carlos"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "carlos2-vpc",
              "Owner": "Carlos"
            }
          }
        }
      ]
    }
  ]
}